--- a/source/less/blocks/global.less
+++ b/source/less/blocks/global.less
@@ -17,6 +17,7 @@
 body {
   margin: 0;
   padding: 0;
+  min-width: 320px;
 
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
@@ -24,10 +25,29 @@ body {
   line-height: 21px;
   font-weight: 400;
   color: @text-dark;
-
   text-transform: uppercase;
 
-  min-width: 320px;
-
   background-position: top center;
+}
+
+.visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+@media (min-width: @desktop-width) {
+  body {
+    background-color: #f2f2f2;
+  }
 }
