--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -10,15 +10,15 @@
 
 @semi-dark: #f2f2f2;
 
-@padding-side: 20px;
+@indent-side: 20px;
 
 @tablet-padding-side: 60px;
 
-@desctop-padding-side: 120px;
+@desktop-padding-side: 120px;
 
-@desctop-commercial-padding: 80px;
+@desktop-commercial-padding: 80px;
 
-@padding-top: 23px;
+@indent-top: 23px;
 
 @padding-bottom: 28px;
 
@@ -58,8 +58,8 @@
 
 @tablet-item-width: 324px;
 
-@desctop-width: 1200px;
+@desktop-width: 1280px;
 
 @advantages-tablet-width: 168px;
 
-@advantages-desctop-width: 288px;
+@advantages-desktop-width: 288px;
