--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -5,15 +5,14 @@
 
 .form__group {
   border: none;
-
   margin: 0;
+  margin-top: @indent-top;
   padding: 0;
-  padding-top: @padding-top;
+  padding-top: @indent-top;
   padding-bottom: @padding-bottom;
   border-bottom: @border;
-  padding-left: @padding-side;
-  padding-right: @padding-side;
-  margin-top: @padding-top;
+  padding-left: @indent-side;
+  padding-right: @indent-side;
 }
 
 .form__group-wrapper {
@@ -21,11 +20,14 @@
 }
 
 .form__group-heading {
+  margin: 0;
+  padding: 0;
   text-align: center;
-
   font-size: @title-font-size;
   line-height: @title-line-height;
   font-weight: 700;
+  /* Временно, чтобы видеть сетку
+  border: 1px solid green;*/
 }
 
 .form__group-title {
@@ -41,6 +43,12 @@
   padding-bottom: 20px;
 }
 
+.form__title-phone {
+  margin:0;
+  padding: 0;
+  margin-bottom: 15px;
+}
+
 .form__group-item {
   width: 280px;
   display: flex;
@@ -53,13 +61,34 @@
   font-size: @placeholder-font-size;
   line-height: @placeholder-line-height;
   font-weight: 700;
-
   text-transform: none;
+  display: inline-block;
+  margin-left: 80px;
+}
+
+.form__radio-title {
+  margin-top: @indent-side;
+  margin-bottom: @indent-side;
+}
+
+.form__checkbox-title {
+  margin-top: 31px;
+  margin-bottom: 31px;
+}
+
+li:nth-child(1) .form__checkbox-last {
+  margin-top: 17px;
+}
+
+li:nth-child(4) .form__checkbox-last {
+  margin-bottom: 17px;
 }
 
 .form__title-email {
-  padding-bottom: 15px;
-
+  margin: 0;
+  padding: 0;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .form__field {
@@ -72,7 +101,7 @@
   border: 0;
   outline: none;
 
-  padding: 16px @padding-side;
+  padding: 16px @indent-side;
 
   background-color: @semi-dark;
 
@@ -81,10 +110,12 @@
 
 .form__field-name {
   width: 82%;
+  margin-bottom: @indent-side;
 }
 
 .form__field-sername {
   width: 69%;
+  margin-bottom: @indent-side;
 }
 
 .form__field-patronym {
@@ -115,16 +146,17 @@
 .form__inner {
   margin: 0;
   padding: 0;
-
-  padding-top: @padding-top;
+  padding-top: @indent-top;
   padding-bottom: @padding-bottom;
-
   text-align: center;
+  /*Временно, чтобы видеть сетку
+  border: 1px solid green;*/
 }
 
 .form__field-message {
   width: 240px;
   min-height: 160px;
+  margin-top: @indent-top;
 }
 
 .form__phone {
@@ -195,7 +227,6 @@
     width: @tablet-item-width;
     margin: 0;
     padding: 0;
-
     border: none;
   }
 
@@ -221,6 +252,11 @@
     text-align: center;
   }
 
+  .form__group--contacts .form__group-heading {
+    display: inline-block;
+    margin-bottom: 36px;
+  }
+
   .form__group--contacts {
     margin: 0;
     padding: 0;
@@ -236,6 +272,10 @@
   .form__field-phone,
   .form__field-email {
     width: 100%;
+  }
+
+  .form__field-patronym {
+    margin-bottom: 73px;
   }
 
   .form__group--attractions {
@@ -270,10 +310,86 @@
     display: inline-block;
     width: @tablet-item-width;
     text-align: right;
+    margin: 0;
+    margin-top: 24px;
+  }
+
+  .form__group--name .form__group-heading,
+  .form__group--impression .form__group-heading {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 60px;
+  }
+
+  li:nth-child(1) .form__radio-title {
+    margin-bottom: 28px;
+  }
+
+  li:nth-child(2) .form__radio-title {
+    margin-top: 28px;
+    margin-bottom: 28px;
+  }
+
+  li:nth-child(3) .form__radio-title {
+    margin-top: 28px;
+  }
+
+  .form__title-email {
+    margin-top: 30px;
+  }
+
+  .form__field-email {
+    margin-bottom: 56px;
+  }
+
+  .form__group--attractions .form__group-heading,
+  .form__group--contacts .form__group-heading {
+    width: 400px;
+    padding-right: 55px;
+    padding-left: 55px;
+  }
+
+  li:nth-child(1) .form__checkbox-title {
+    margin-top: 62px;
+    margin-bottom: 35px;
+  }
+
+  li:nth-child(2) .form__checkbox-title {
+    margin-top: 62px;
+    margin-bottom: 35px;
+  }
+
+  li:nth-child(3) .form__checkbox-title {
+    margin-top: 35px;
+    margin-bottom: 90px;
+  }
+
+  li:nth-child(4) .form__checkbox-title {
+    margin-top: 35px;
+    margin-bottom: 90px;
+  }
+
+  .form__checkbox-title {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .form__inner {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 59px;
+    text-align: center;
+    /*Временно, чтобы видеть сетку
+    border: 1px solid green;*/
+  }
+
+  .form__field-message {
+    margin: 0;
+    margin-top: 60px;
   }
 }
 
-@media (min-width: @desctop-width) {
+@media (min-width: @desktop-width) {
   .form__group--name .form__group-item,
   .form__group--impression .form__group-item {
     width: 400px;
@@ -289,13 +405,7 @@
     margin-right: 160px;
   }
 
-  .form__group--contacts .form__item-contacts {
-    margin: 0;
-    padding: 0;
-    width: 960px;
-  }
-
-  .form__title-phrase {
+  .form__title-phone span {
     position: absolute;
     visibility: hidden;
   }
@@ -305,20 +415,31 @@
     padding: 0;
     width: 400px;
     margin-right: 80px;
+    margin-bottom: 52px;
   }
 
   .form__group--contacts .form__item-contacts:nth-child(2) {
     margin: 0;
     padding: 0;
     width: 480px;
+    margin-bottom: 52px;
   }
 
   .form__field-phone {
-    width: 65%;
+    width: 70%;
+  }
+
+  .form__phone,
+  .form__email {
   }
 
   .form__field-email {
-    width: 79%;
+    width: 80%;
+    margin-bottom: 0;
+  }
+
+  .form__group--contacts .form__group-heading {
+    margin-bottom: 77px;
   }
 
   .form__item-contacts {
@@ -329,10 +450,23 @@
     display: flex;
   }
 
-  .form__group--attractions {
+  .form__phone,
+  .form__email {
     margin: 0;
     padding: 0;
-    width: 690px;
+  }
+
+  .form__email {
+    width: 63px;
+}
+
+  .form__title-phone,
+  .form__title-email {
+    margin: 0;
+    padding: 0;
+    margin-right: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
 
   .form__group--attractions .form__group-list {
@@ -342,23 +476,41 @@
   }
 
   .form__group--attractions .form__group-item {
-    width: 228px;
-    margin: 0;
-    padding: 0;
+    margin-top: 45px;
+    margin-bottom: 70px;
     flex-grow: 1;
-    /*Временно чтобы видеть сетку*/
-    border: 1px solid black;
+    /*Временно чтобы видеть сетку
+    border: 1px solid red;*/
+  }
+
+  .form__group--impression .form__group-heading {
+    margin-left: 80px;
+  }
+
+  li:nth-child(1n) .form__checkbox-title {
+    margin: 0;
+    width: 100%;
+    text-align: right;
+    /*Временно чтобы видеть сетку
+    border: 1px solid green;*/
+  }
+
+  .form__inner {
+    width: 960px;
   }
 
   .form__field-message {
-    width: 960px;
+    width: 100%;
     box-sizing: border-box;
+    /*Временно чтобы видеть сетку
+    border: 1px solid green;*/
   }
 
   .form__note {
-    visibility: visible;
-    display: inline-block;
     width: 480px;
-    text-align: right;
+  }
+
+  .form__group-content {
+    align-items: center;
   }
 }
