--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -7,6 +7,8 @@
 
   display: flex;
   flex-direction: column;
+  /* Временно, чтобы видеть сетку
+  border: 1px solid green;*/
 }
 
 .page-footer__hashtag {
@@ -19,8 +21,8 @@
   .page-footer {
     margin: 0;
     padding: 0;
-    padding-top: 35px;
-    padding-bottom: 35px;
+    padding-top: 37px;
+    padding-bottom: 37px;
     padding-left: @tablet-padding-side;
     padding-right: @tablet-padding-side;
 
