--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,12 +1,19 @@
 .social {
   margin: 0;
   padding: 0;
-
   list-style: none;
-
   display: flex;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .social__link {
   text-decoration: none;
+}
+
+@media (min-width: @tablet-width) {
+  .social {
+    margin: 0;
+    padding: 0;
+  }
 }
