--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,5 +1,8 @@
 .page-footer {
   text-align: center;
+
+  margin: 0;
+  padding: 0;
   padding-top: 40px;
   padding-bottom: 23px;
   padding-left: 85px;
@@ -19,7 +22,6 @@
 
 @media (min-width: @tablet-width) {
   .page-footer {
-    margin: 0;
     padding: 0;
     padding-top: 37px;
     padding-bottom: 37px;
