--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,10 +1,11 @@
 .page-intro {
-  margin: 0;
-  padding: 0;
   padding-right: @indent-side;
   padding-left: @indent-side;
   padding-top: 42px;
+  padding-bottom: 10px;
   text-align: center;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .page-intro--border {
@@ -16,26 +17,20 @@
   line-height: @title-line-height;
   font-weight: 700;
 
-  margin: 0;
-  padding: 0;
   margin-bottom: 32px;
 }
 
 .page-intro__text {
   line-height: @title-line-height;
-
-  margin: 0;
-  padding: 0;
 }
 
 .page-intro--inner {
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 @media (min-width: @tablet-width) {
   .page-intro {
     margin: 0 auto;
-    padding: 0;
     padding-top: 48px;
     padding-bottom: 54px;
     width: 489px;
@@ -55,6 +50,6 @@
 @media (min-width: @desktop-width) {
   .page-intro--inner {
     padding-top: 105px;
-    padding-bottom: 65px;
+    padding-bottom: 70px;
   }
 }
