--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,6 +1,5 @@
-.photo {
-  margin: 0;
-  padding: 0;
+.photo__wrapper {
+  border-top: @border;
 }
 
 .photo__description {
@@ -8,63 +7,73 @@
   flex-direction: column;
 }
 
-
 .photo__meta {
   padding-top: 15px;
-  /*временно для сетки
-  border: 1px solid red;*/
+  width: 280px;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
   .photo {
-    margin-right: @tablet-padding-side;
-    margin-left: @tablet-padding-side;
+    padding-right: @tablet-padding-side;
+    padding-left: @tablet-padding-side;
   }
 
   .photo__wrapper {
     display: flex;
     flex-wrap: wrap;
-    /*временно для сетки
-    border: 1px solid yellow;*/
+    border: none;
   }
 
   .photo__meta {
+    padding-right: 0px;
+    padding-left: 0;
     padding-bottom: 20px;
     display: flex;
     justify-content: space-around;
+    width: 324px;
 
     background-color: #f2f2f2;
   }
 
+  .promo-photo--first .photo__meta {
+    width: @tablet-content-width;
+  }
+
   .photo__description {
     width: 200px;
+    padding-left: @indent-side;
 
     flex-grow: 1;
-
-    padding-left: @indent-side;
   }
 }
 
 @media (min-width: @desktop-width) {
   .photo {
-    margin: 0;
+    padding: 0;
   }
 
   .photo__wrapper {
     padding-top: 10px;
-    /*временно для сетки
-    border: 1px solid yellow;*/
   }
 
   .photo__meta {
     color: #ffffff;
 
-    margin-top: -82px;
-
     background-color: #000000;
     opacity: 0.5;
 
-    position: relative;
+    width: 400px;
+
+    position: absolute;
     z-index: 1;
+    top: 185px;
+    left: 0;
+  }
+
+  .promo-photo--first .photo__meta {
+    top: 318px;
+    left: 0;
+    width: @desktop-width;
   }
 }
