--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -54,11 +54,13 @@
 
 @tablet-width: 768px;
 
+@mobile-width-only: 767px;
+
 @tablet-content-width: 648px;
 
 @tablet-item-width: 324px;
 
-@desktop-width: 1280px;
+@desktop-width: 1200px;
 
 @advantages-tablet-width: 168px;
 
