--- a/source/less/blocks/commercial.less
+++ b/source/less/blocks/commercial.less
@@ -1,44 +1,48 @@
 .commercial__content {
-  text-align: center;
-
-  margin: 0;
-  padding: 0;
   padding-top: 33px;
   padding-bottom: 50px;
   padding-right: @indent-side;
   padding-left: @indent-side;
+
+  text-align: center;
 }
 
 .commercial__title {
   font-size: @heading-font-size;
   line-height: @heading-line-height;
   font-weight: 700;
-  text-align: center;
 
-  margin: 0;
   padding: 0;
+  margin: 0 auto;
   margin-bottom: 30px;
+  width: 280px;
 }
 
 .commercial__text {
   line-height: @text-line-height;
 
-  margin: 0;
-  padding: 0;
-
-  display: inline-block;
+  display: block;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .commercial__link {
   text-decoration: none;
-  display: inline-block;
+  display: block;
+  width: 280px;
+  margin: 0 auto;
   margin-top: 40px;
+}
+
+.commercial--inner .commercial__text {
+  width: 240px;
 }
 
 .commercial__map {
   background-image: url("../img/bg-map-mobile@1x.jpg");
   background-position: 0 0;
   background-repeat: no-repeat;
+  background-size: cover;
 
   background-color: #cbe0a4;
 
@@ -46,33 +50,30 @@
 }
 
 .commercial__video {
-  margin: 0;
-  padding: 0;
   background-image: url("../img/video-mobile@1x.jpg");
   background-position: 0 0;
   background-repeat: no-repeat;
 
+  display: block;
   height: 200px;
+  width: 320px;
+  margin: 0 auto;
+}
+
+@media (max-width: @mobile-width-only) {
+  .commercial__text br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
-  .commercial__text {
-    width: 440px;
-  }
-
+  .commercial__text,
   .commercial__link {
     width: 460px;
   }
 
-  .commercial__map {
-    background-size: @tablet-width;
-  }
-
-  .commercial--inner {
-    padding-left: @tablet-padding-side;
-    padding-right: @tablet-padding-side;
-
-    width: @tablet-content-width;
+  .commercial--inner .commercial__text {
+    width: 430px;
   }
 
   .commercial__video {
@@ -89,33 +90,8 @@
 
 @media (min-width: @desktop-width) {
   .commercial__content {
-    padding: 0;
     padding-top: 57px;
     padding-bottom: 67px;
-    /*временно для сетки
-    border: 1px solid red;*/
-  }
-
-  .commercial__text {
-    margin: 0 auto;
-    /*временно для сетки
-    border: 1px solid red;*/
-  }
-
-  .commercial__link {
-    margin-left: 372px;
-    margin-right: 372px;
-  }
-
-  .commercial__map {
-    background-size: @desktop-width;
-  }
-
-  .commercial--inner {
-    padding-left: @desktop-padding-side;
-    padding-right: @desktop-padding-side;
-
-    width: 960px;
   }
 
   .commercial__video {
@@ -127,8 +103,5 @@
 
     height: 500px;
     width: 800px;
-
-    margin-left: @desktop-commercial-padding;
-    margin-right: @desktop-commercial-padding;
   }
 }
